<resources>
  <string name="app_name">Story App</string>
  <string name="register">Register</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="prompt_name">Name</string>
  <string name="navigate_to_login">Already have an account? Login here.</string>
  <string name="invalid_name">Invalid name</string>
  <string name="invalid_email">Invalid email</string>
  <string name="invalid_password">Invalid password</string>
  <string name="login">Login</string>
  <string name="welcome">Welcome</string>
  <string name="welcome_message">Welcome to the Story App!</string>
  <string name="welcome_description">Let\'s share about Android, iOS, Machine Learning, Cloud Front-End, Back-End, and IT related topics!</string>
  <string name="sign_in">Sign In</string>
  <string name="sign_up">Sign Up</string>
  <string name="enter_password">Enter your password</string>
  <string name="enter_email">Enter your email</string>
  <string name="enter_name">Enter your name</string>
  <string name="navigate_to_register">Did not have account?, Register here</string>
  <string name="please_wait">Please wait</string>
  <string name="Unauthenticated">Unauthenticated</string>
  <string name="menu_home">Home</string>
  <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
  <string name="add_story">Add story</string>
  <string name="logout">Logout</string>
  <string name="nav_header_desc">Navigation Header</string>
  <string name="story_image">Story Image</string>
  <string name="detail_story">Detail Story</string>
  <string name="camera">Camera</string>
  <string name="gallery">Gallery</string>
  <string name="description">Description</string>
  <string name="upload">Upload</string>
  <string name="invalid_location">Invalid location</string>
  <string name="invalid_image">Invalid Image</string>
  <string name="invalid_description">Invalid Description</string>
  <string name="error_processing_image">Failed processing image</string>
  <string name="error_capturing_image">Failed capturing image</string>
  <string name="camera_permission_required">Camera permission required</string>
  <string name="location_permission_required">Location permission required</string>
  <string name="error_creating_image_file">Failed save captured image</string>
  <string name="error_getting_location">Failed getting location</string>
  <string name="error_user_not_logged_in">Failed user not login</string>
  <string name="error_image_required">Story image required</string>
  <string name="logout_title">Logout</string>
  <string name="logout_message">"Are you sure to logout? "</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="rawLocation">%1$s</string>
  <string name="location">Location</string>
  <string name="postedOn">Posted on: %1$s</string>
  <string name="guest_mode">Guest Mode</string>
  <string name="no_more_stories">No more stories</string>
  <string name="error_occurred">An error occured</string>
  <string name="maps">Maps</string>
</resources>