<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingHorizontal="48dp">

  <ImageView
    android:id="@+id/iv_hero"
    android:layout_width="match_parent"
    android:layout_height="316dp"
    android:layout_marginTop="32dp"
    android:contentDescription="@string/welcome"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/greeting" />

  <TextView
    android:id="@+id/tv_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/welcome_message"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/iv_hero" />

  <TextView
    android:id="@+id/tv_description"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/welcome_description"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_title" />

  <LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_description">

    <com.google.android.material.button.MaterialButton
      android:id="@+id/btn_sign_in"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_weight="1"
      android:paddingHorizontal="16dp"
      android:text="@string/sign_in"
      android:textColor="#FFFFFF" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/btn_sign_up"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:paddingHorizontal="16dp"
      android:text="@string/sign_up"
      android:textColor="#FFFFFF" />
  </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>