<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_home">

  <fragment
    android:id="@+id/nav_home"
    android:name="dev.erhahahaa.storyapp.ui.story.HomeFragment"
    android:label="@string/menu_home"
    tools:layout="@layout/fragment_home">
    <action
      android:id="@+id/action_nav_home_to_nav_detail_story"
      app:destination="@id/nav_detail_story">
      <argument
        android:name="story_detail"
        app:argType="dev.erhahahaa.storyapp.data.model.StoryModel" />
    </action>
    <action
      android:id="@+id/action_nav_home_to_nav_add_story"
      app:destination="@id/nav_add_story" />
    <action
      android:id="@+id/action_nav_home_to_nav_map"
      app:destination="@id/mapFragment" />
  </fragment>


  <fragment
    android:id="@+id/nav_add_story"
    android:name="dev.erhahahaa.storyapp.ui.story.AddStoryFragment"
    android:label="@string/add_story"
    tools:layout="@layout/fragment_add_story" />

  <fragment
    android:id="@+id/nav_detail_story"
    android:name="dev.erhahahaa.storyapp.ui.story.DetailStoryFragment"
    android:label="@string/detail_story"
    tools:layout="@layout/fragment_detail_story" />
  <fragment
    android:id="@+id/mapFragment"
    android:name="dev.erhahahaa.storyapp.ui.map.MapFragment"
    android:label="@string/maps"
    tools:layout="@layout/fragment_map">
    <action
      android:id="@+id/action_nav_map_to_detail_story"
      app:destination="@id/nav_detail_story">
      <argument
        android:name="story_detail"
        app:argType="dev.erhahahaa.storyapp.data.model.StoryModel" />
    </action>
  </fragment>
</navigation>